# CS636-CPU-Raytracer

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
assets/: CMakeLists.txt  basic-reflection-scene.json  basic-refraction-scene.json  blobby-reflection-scene.json  complex-reflection-scene.json  complex-refraction-scene.json  complex-shadow-scene.json  cube-scene.json  dragon-scene.json  dragon.smf  halo-ring-scene.json  halo_ring_test.smf  inside-cube-scene.json  medium-refraction-scene.json  models-and-spheres.json  penny3.smf  shadow-puppet-scene.json  single-shadow-scene.json  single-supertoroid.json  solarized-sphere-and-supertoroid-scene.json  spheres-scene.json  supertoroid-scene.json  supertoroid.smf
class-site/: _config.yml  index.html
class-site/_layouts/: default.html  post.html
class-site/_posts/: 2020-04-09-welcome-to-jekyll.markdown  2020-04-19-Assignment-1-Basic-Ray-Tracer-With-Spheres-and-Triangle-Meshes.markdown  2020-04-26-Assignment-2-Diffuse-and-Specular-Shading-Model-with-Point-Lights.markdown  2020-05-10-Assignment-3-Acceleration-Techniques.markdown  2020-05-17-Assignment-4-Adaptive-Supersampiling-Anti-Aliasing.markdown  2020-05-24-Assignment-5-Shadows.markdown  2020-05-31-Assignment-6-Reflections.markdown  2020-06-05-Assignment-6-Fixing-Issues.markdown  2020-06-08-Assignment-7-Refractions.markdown  (+1 more)
src/: CMakeLists.txt  bounding-box.cpp  bounding-box.h  camera.cpp  camera.h  face.h  intersectable.h  main.cpp  material.h  mesh.cpp  mesh.h  pixel.h  ray.h  raytracer.cpp  raytracer.h  scene.h  screen.cpp  screen.h  sphere.cpp  sphere.h
(+2 files in other folders)
